# exercise-db

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  exercise.db  initialize_db.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8f2af354fce6_init.py
models/: emg_activation.py  exercise.py  exercise_set.py  exercises.csv  models.py  muscle.py  muscle_group.py  program.py  program_type.py  template_exercise.py  user.py  workout.py  workout_exercise.py  workout_template.py
routers/: __init__.py  exercise_sets.py  exercises.py  muscle_groups.py  muscles.py  program_types.py  programs.py  template_exercises.py  users.py  workout_exercises.py  workout_templates.py  workouts.py
routers/utils/: database.py  order_exercises.py
static/: style.css
templates/: base.html  programs.html  selected_program.html  test.html  user_exercise.html  workout.html  workout_exercise.html  workout_template.html  workouts.html
